--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -1,13 +1,19 @@
 :root {
     --primary: #ffffff;
-    --secondary: #000000;
+    --secondary: #1E2226;
+    --secondary-light: #2E3235;
+    --secondary-dark: #0 00000;
+
+    --radius-small: 10px;
 }
 
 * {
     box-sizing: border-box;
     margin: 0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    color: var(--secondary);
 }
 
 li {
@@ -24,4 +30,78 @@ input,
 button,
 .icon {
     display: block;
+}
+
+.page {
+    padding-block: 10vh;
+}
+
+.small-page {
+    padding-block: 5vh;
+}
+
+.flex {
+    display: flex !important;
+}
+
+.jstf-ctr {
+    justify-content: center;
+}
+
+.gap-5 {
+    gap: 5px;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.w-80 {
+    width: 80%;
+    margin: auto auto;
+}
+
+.title {
+    font-size: 96px;
+}
+
+.subtitle {
+    font-size: 84px;
+    margin-block: 10px;
+    line-height: 84px;
+    overflow: visible;
+}
+
+.small-title {
+    font-size: 48px;
+    margin-block: 10px;
+}
+
+.txt-ctr {
+    text-align: center;
+}
+
+.cur {
+    cursor: pointer !important;
+}
+
+.mg-a-a {
+    margin: auto auto;
+}
+
+.black-button {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-size: 20px;
+    margin-block: 40px;
+    padding: 20px 40px;
+    width: fit-content;
+    color: var(--primary);
+    border-radius: var(--radius-small);
+    background-image: linear-gradient(0deg, var(--secondary), var(--secondary-light));
+}
+
+.left-arrow {
+    fill: var(--primary);
 }
