--- a/src/style/home.css
+++ b/src/style/home.css
@@ -4,6 +4,29 @@
 
 .main-quote {
     margin-block: 100px;
+    text-shadow: 0px 0px 10px #ffd044;
 }
 
-/* .main-img {} */
+@media (max-width: 800px) {
+    .main-img {
+        position: relative;
+        left: -25vw;
+        width: 150vw !important;
+    }
+    
+    .main-quote {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 400px) {
+    .main-img {
+        position: relative;
+        left: -50vw;
+        width: 200vw !important;
+    }
+
+    .main-quote {
+        font-size: 5vw;
+    }
+}
