--- a/src/style/events.css
+++ b/src/style/events.css
@@ -1,3 +1,6 @@
+/* =================== */
+/* UPCOMING EVENT CART */
+/* =================== */
 .outer {
     padding-inline: 10px;
 }
@@ -85,5 +88,46 @@
         height: fit-content;
         margin: auto auto;
         transform: translateY(0px);
+    }
+}
+
+/* =============== */
+/* PAST EVENT CART */
+/* =============== */
+.past-event {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid var(--secondary);
+    border-radius: var(--radius-small);
+    box-shadow: 2px 2px 0px var(--secondary);
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.past-event-location, .past-event-date {
+    justify-content: right;
+    align-items: center;
+}
+
+@media (max-width: 900px) {
+    .past-event {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 700px) {
+    .past-event {
+        font-size: 14px;
+        padding: 5px;
+        border-radius: 4px;
+    }
+}
+
+@media (max-width: 400px) {
+    .past-event {
+        font-size: 12px;
+        border: 1px solid var(--secondary);
     }
 }
