--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -15,6 +15,7 @@
     scroll-behavior: smooth;
     overflow-x: hidden;
     color: var(--secondary);
+    transition: all 200ms ease-in-out;
 }
 
 li {
@@ -95,11 +96,17 @@ button,
     align-items: center;
     font-size: 20px;
     margin-block: 40px;
-    padding: 20px 40px;
+    padding: 15px 20px;
     width: fit-content;
     color: var(--primary);
     border-radius: var(--radius-small);
     background-image: linear-gradient(0deg, var(--secondary), var(--secondary-light));
+    cursor: pointer;
+}
+
+.black-button:hover {
+    padding-right: 15px;
+    gap: 15px;
 }
 
 .left-arrow {
@@ -117,6 +124,12 @@ button,
     }
 }
 
+@media (max-width: 600px) {
+    .w-80 {
+        width: 95%;
+    }
+}
+
 @media (max-width: 400px) {
     .title {
         font-size: 28px;
@@ -128,7 +141,7 @@ button,
         text-align: center;
     }
 
-    .w-80 {
-        width: 95%;
+    .small-heading {
+        text-align: center;
     }
 }
