--- a/src/style/home.css
+++ b/src/style/home.css
@@ -7,6 +7,13 @@
     text-shadow: 0px 0px 10px #ffd044;
 }
 
+.youtube-iframe {
+    width: 60vw;
+    height: 500px;
+    margin: 5vw auto;
+    border-radius: var(--radius-big);
+}
+
 @media (max-width: 800px) {
     .main-img {
         position: relative;
