--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -46,7 +46,7 @@ button,
 }
 
 .page {
-    padding-block: 10vh;
+    padding-block: 5vh;
 }
 
 .small-page {
@@ -105,6 +105,10 @@ button,
     margin: auto auto;
 }
 
+.margin-top-bottom-20 {
+    margin-bottom: 20px;
+}
+
 .black-button {
     display: flex;
     gap: 10px;
@@ -147,9 +151,19 @@ button,
     }
 }
 
+@media (max-width: 700px) {
+    .dashboard-pages {
+        margin-left: 50px;
+    }
+}
+
 @media (max-width: 600px) {
     .w-80 {
         width: 95%;
+    }
+
+    .dashboard-pages {
+        margin-left: 0px;
     }
 }
 
