--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -7,7 +7,7 @@
     --secondary-dark: #0 00000;
     --error: #fd4557d3;
     --success: #2afc46b9;
-    
+
     /* sizing variables */
     --radius-small-small: 5px;
     --radius-small: 10px;
@@ -66,7 +66,7 @@ button,
 }
 
 .gap-10 {
-    gap: 5px;
+    gap: 10px;
 }
 
 .w-100 {
@@ -75,6 +75,10 @@ button,
 
 .w-80 {
     width: 80%;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .title {
@@ -181,4 +185,20 @@ button,
     .small-heading {
         text-align: center;
     }
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px var(--primary);
+    border-radius: var(--radius-small);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary-dark);
+    border-radius: 10px;
 }
