--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     display: block;
-    width: 20vw;
+    min-width: 20vw;
     height: 90vh;
     padding: 10px;
     margin-block: 1vh;
@@ -10,7 +10,6 @@
     border-radius: var(--radius-big);
     border: 1px solid var(--secondary);
     box-shadow: 0px 0px 10px var(--grey);
-    overflow-y: scroll;
 }
 
 .sidebar.collapse {
@@ -22,6 +21,7 @@
     font-size: 20px;
     font-weight: 600;
     padding: 10px 20px;
+    margin-block: 2px;
     border-radius: var(--radius-small);
     align-items: center;
 }
@@ -55,19 +55,27 @@
 
 @media (max-width: 1100px) {
     .sidebar {
-        width: 30vw;
+        min-width: 30vw;
         margin: 5px 5px;
     }
 
-    .content {
-        width: 70vw;
+    .sidebar.collapse {
+        min-width: 40px;
+    }
+
+    .level {
+        font-size: 16px;
     }
 }
 
 @media (max-width: 800px) {
     .sidebar {
-        width: 40vw;
+        min-width: 40vw;
         margin: 5px 5px;
+    }
+
+    .level {
+        font-size: 20px;
     }
 }
 
@@ -77,13 +85,17 @@
         width: 60vw;
         margin: 5px 5px;
     }
+
+    .sidebar.collapse {
+        min-width: 0px;
+    }
 }
 
 @media (max-width: 600px) {
     .sidebar {
         position: absolute;
         z-index: 20;
-        width: 80vw;
+        width: 90vw;
         margin: 5px 5px;
     }
 
@@ -101,11 +113,4 @@
     .invisible.collapse {
         display: none;
     }
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-    margin-block: auto;
-    border-radius: var(--radius);
-    overflow: hidden;
 }
