--- a/src/style/table.css
+++ b/src/style/table.css
@@ -1,29 +1,61 @@
-.table {
-    width: 90%;
-    height: 80vh;
-    overflow: scroll;
+.action-bar {
+    display: flex;
+    justify-content: left !important;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+    top: 0px;
+    z-index: -1;
+    width: 90% !important;
     margin: auto auto;
-    border: 1px solid var(--secondary-light);
+    background-color: var(--primary-dark);
+    border-top-left-radius: var(--radius-small);
+    border-top-right-radius: var(--radius-small);
+}
+
+.action-btn {
+    padding: 8px 10px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: var(--secondary);
+    background-color: var(--primary);
     border-radius: var(--radius-small);
 }
 
-.table-heading {
-    width: 100%;
+.action-icon-btn {
+    padding: 8px;
+}
+
+.table {
+    width: 90%;
+    height: 70vh;
+    overflow: scroll;
+    margin: auto auto;
+    border-bottom-left-radius: var(--radius-small);
+    border-bottom-right-radius: var(--radius-small);
 }
 
 .tr {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 2vw;
+    padding: 10px;
+    border-top: 0.5px solid var(--primary-dark);
+    border-bottom: 0.5px solid var(--primary-dark);
 }
 
-#tr {
-    background-color: var(--secondary);
+.tr:hover {
+    box-shadow: 0px 1px 2px var(--primary-dark);
 }
 
 .th {
-    color: var(--primary);
+    font-weight: 600;
+    padding: 10px;
+    width: 90%;
+    background-color: var(--primary-dark);
 }
 
 .name {
@@ -32,7 +64,7 @@
 }
 
 .addr {
-    width: 200px;
+    width: 150px;
     min-width: 100px;
 }
 
@@ -56,14 +88,24 @@
     width: 80px;
     min-width: 40px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
-.mail {
-    fill: var(--primary);
-    font-size: 24px;
-    padding: 4px;
-    background-color: var(--secondary);
-    border-radius: var(--radius-big);
+@media (max-width: 1000px) {
+    .action-bar, .table, .th {
+        width: 95% !important;
+    }
+
+    .name, .addr, .purpose, .amt, .action {
+        font-size: 12px;
+    }
+
+    .action {
+        width: fit-content;
+        min-width: 80px;
+        justify-content: right;
+    }
 }
 
 @media (max-width: 700px) {
@@ -80,8 +122,33 @@
     }
 }
 
+@media (max-width: 600px) {
+    .action-btn {
+        font-size: 14px;
+    }
+
+    .action-icon {
+        font-size: 20px;
+    }
+}
+
 @media (max-width: 500px) {
     .addr {
+        display: none;
+    }
+
+    .action-bar {
+        gap: 5px;
+        padding: 10px;
+    }
+
+    .action-btn {
+        padding: 5px 8px;
+        gap: 5px;
+        border-radius: var(--radius-small-small);
+    }
+
+    .action-icon {
         display: none;
     }
 }
