bill and footer

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -5,6 +5,7 @@
     --secondary: #252525;
     --secondary-light: #2E3235;
     --secondary-dark: #0 00000;
+    --black: #000000;
     --error: #fd4557d3;
     --success: #2afc46b9;
 
