--- a/src/style/home.css
+++ b/src/style/home.css
@@ -14,6 +14,10 @@
     border-radius: var(--radius-big);
 }
 
+.main-logo {
+    width: 150px;
+}
+
 @media (max-width: 800px) {
     .main-img {
         position: relative;
