--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -62,6 +62,10 @@ button,
     justify-content: center;
 }
 
+.txt-jstfy {
+    text-align: justify;
+}
+
 .gap-5 {
     gap: 5px;
 }
@@ -145,6 +149,30 @@ button,
     background-color: var(--error);
 }
 
+.main-text {
+    font-size: 19px;
+    color: var(--secondary);
+}
+
+.about-grid {
+    width: 80%;
+    margin: 5vw auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+}
+
+.about-img {
+    width: 200px;
+    height: fit-content;
+}
+
+@media (max-width: 1000px) {
+    .about-grid {
+        width: 90%;
+    }
+}
+
 @media (max-width: 800px) {
     .title {
         font-size: 48px;
@@ -153,6 +181,18 @@ button,
     .subtitle {
         font-size: 44px;
         line-height: 44px;
+    }
+    
+    .main-text {
+        font-size: 16px;
+    }
+    
+    .about-grid {
+        width: 95%;
+    }
+
+    .about-img {
+        width: 150px;
     }
 }
 
@@ -169,6 +209,16 @@ button,
 
     .dashboard-pages {
         margin-left: 0px;
+    }
+
+    .about-grid {
+        width: 80vw;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .about-img {
+        width: 60vw;
+        margin: auto auto;
     }
 }
 
