--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -170,6 +170,32 @@ button,
     height: fit-content;
 }
 
+.donations-container {
+    margin-block: 40px;
+    justify-content: space-evenly;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.donations {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30vw;
+    min-width: 300px;
+    padding: 20px 20px 20px 20px;
+    margin: 10px 10px 10px 0px;
+    font-size: 18px;
+    background-color: var(--primary-dark);
+    box-shadow: 5px 5px 0px var(--secondary-light);
+    border: 2px solid var(--secondary);
+    border-radius: var(--radius-big);
+}
+
+.donation-line {
+    padding: 5px;
+}
+
 @media (max-width: 1000px) {
     .about-grid {
         width: 90%;
@@ -222,6 +248,11 @@ button,
     .about-img {
         width: 60vw;
         margin: auto auto;
+    }
+
+    .donations {
+        font-size: 16px;
+        width: 80vw;
     }
 }
 
