--- a/client/src/style/sidebar.css
+++ b/client/src/style/sidebar.css
@@ -101,6 +101,7 @@
     }
 
     .sidebar.collapse {
+        min-width: 0px !important;
         width: 0px;
         padding: 0px;
         border: none;
