--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: space-between;
     overflow: visible;
-    padding: 10px;
+    padding: 15px;
+    background-color: var(--primary-dark);
 }
 
 /* ---- navigation bar links ---- */
@@ -20,7 +21,7 @@
 }
 
 .nav-logo {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .link-name {
