event change works

--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -112,6 +112,7 @@ a hr {
         margin: 0px 0px;
         display: block;
         top: 55px;
+        left: 1vw;
         width: 98vw;
         margin: auto auto;
         height: 0;
