--- a/client/src/style/globals.css
+++ b/client/src/style/globals.css
@@ -139,11 +139,6 @@ button,
     cursor: pointer;
 }
 
-.black-button:hover {
-    padding-right: 15px;
-    gap: 15px;
-}
-
 .left-arrow {
     fill: var(--primary);
 }
@@ -154,6 +149,11 @@ button,
 
 #red {
     background-color: var(--error);
+}
+
+#text-red {
+    color: var(--error);
+    text-shadow: 0px 0px 0px var(--black);
 }
 
 .main-text {
@@ -198,6 +198,24 @@ button,
 
 .donation-line {
     padding: 5px;
+}
+
+.modal {
+    position: fixed;
+    z-index: 200;
+    width: 90vw;
+    height: 90vh;
+    left: 5vw;
+    top: 5vh;
+    background-color: var(--primary);
+    box-shadow: 0px 0px 20px var(--black);
+    border-radius: var(--radius-big);
+    padding: 20px;
+}
+
+.close-icon {
+    float: right;
+    padding: 2px;
 }
 
 @media (max-width: 1000px) {
@@ -257,6 +275,10 @@ button,
     .donations {
         font-size: 16px;
         width: 80vw;
+    }
+    
+    .modal {
+        padding: 10px;
     }
 }
 
