--- a/client/src/style/table.css
+++ b/client/src/style/table.css
@@ -47,9 +47,12 @@
     border-bottom: 0.5px solid var(--primary-dark);
 }
 
+.tr#active {
+    background-color: var(--primary-dark);
+}
+
 .tr:hover {
-    box-shadow: 0px 1px 4px var(--secondary-light);
-    /* background-color: #f5f5f5; */
+    box-shadow: 0px 1px 2px var(--secondary-light);
 }
 
 .th {
@@ -97,6 +100,35 @@
     align-items: center;
 }
 
+/* modal table custom css */
+.modal-table {
+    width: 100%;
+}
+
+.modal-table .location {
+    padding-inline: 5px;
+    width: 100px;
+    min-width: fit-content;
+}
+
+.modal-table .action {
+    width: fit-content;
+    min-width: fit-content;
+}
+
+.select-button {
+    padding: 3px 5px;
+    width: fit-content;
+    border-radius: var(--radius-small-small);
+    background-color: var(--primary-dark);
+    border: 0.5px solid var(--secondary);
+}
+
+.select-button:hover, .select-button#active {
+    color: var(--primary);
+    background-color: var(--secondary-light);
+}
+
 @media (max-width: 1000px) {
     .action-bar, .table, .th {
         width: 95% !important;
@@ -134,6 +166,10 @@
 
     .action-icon {
         font-size: 20px;
+    }
+
+    .modal .location {
+        padding-left: 5px;
     }
 }
 
