--- a/client/src/style/globals.css
+++ b/client/src/style/globals.css
@@ -109,6 +109,10 @@ button,
     text-align: center;
 }
 
+.capitalize {
+    text-transform: capitalize;
+}
+
 .cur {
     cursor: pointer !important;
 }
