--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     overflow: visible;
-    padding: 15px;
+    padding: 0px;
     background-color: var(--primary-dark);
 }
 
@@ -22,12 +22,13 @@
 
 .nav-logo {
     font-size: 18px;
+    padding-inline: 10px;
 }
 
 .link-name {
     font-size: 18px;
     font-weight: 600;
-    padding: 0px 10px;
+    padding: 20px 10px;
 }
 
 .nav-links {
@@ -40,7 +41,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    transform: translateX(-20px);
+    transform: translateX(-20px) translateY(0);
     background-color: var(--white);
     text-align: left;
     min-width: 250px;
